# Phasely

./: .gitignore  .pdm-python  00_Dashboard.py  00_Start.py  README.md  data_setup.py  main.py  pyproject.toml  requirements.txt
.streamlit/: pages.toml
data/: cycle_tracking_2025.csv  cycle_tracking_lutealphase.csv  sport_sessions.csv
pages/: gesamtscore.py  trainingsplanung.py  zyklusuebersicht.py
src/: calculations.py  classes.py  data_setup.py  globals.py  interface_components.py  modules.py  scores.py
