[project]
name = "Phasely"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gs0232", email = "gs0232@mci4me.at"},
]
dependencies = ["numpy>=2.0.2", "nbformat>=5.10.4", "pandas>=2.3.0", "plotly>=6.1.2", "jupyter>=1.1.1", "streamlit>=1.12.0", "pillow>=11.2.1", "filetype>=1.2.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
